<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceScreen
		android:key="asm_application"
		android:title="@string/pref_asm_application_title"
		android:summary="@string/pref_asm_application_summary"
		android:persistent="false">
		<ListPreference
			android:key="asm_application_language"
			android:title="@string/pref_asm_application_language_title"
			android:summary="@string/pref_asm_application_language_summary"
			android:entries="@array/pref_asm_application_language_entries"
			android:entryValues="@array/pref_asm_application_language_entryvalues"
			android:dialogTitle="@string/pref_asm_application_language_dialogtitle" />
		<PreferenceScreen
			android:key="asm_application_theme"
			android:title="@string/pref_asm_application_theme_title"
			android:summary="@string/pref_asm_application_theme_summary"
			android:persistent="false">
			
		</PreferenceScreen>
	</PreferenceScreen>
	<PreferenceScreen
		android:key="asm_editor"
		android:title="@string/pref_asm_editor_title"
		android:persistent="false">
		
	</PreferenceScreen>
</PreferenceScreen>
